2009-01-05  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Add -fno-member-assembly-info,
	  which remove /Type/Members/Member/AssemblyInfo elements.
	  Requested by Mike Kestner.
	  Warning: this option will break automatic version tracking, so if a
	  member is present in e.g. v1.0 and is removed in e.g. v2.0, 
	  the //Member element will be removed entirely when updating the
	  documentation against the 2.0 assembly.  Use with care.

2008-12-06  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs: Remove "exception" from DocsNodeOrder
	  so that <exception/> elements aren't grouped together.  This causes
	  `make doc-update` to result in ~0 changes in ../../class/corlib.
	  Change the sorting of --exceptions-generated <exception/> nodes so
	  that namespaces are taken into consideration, thus "properly"
	  grouping types by namespaces, as I'd usually expect...

2008-12-05  Jonathan Pryor <jpryor@novell.com>

	* Mono.Documentation/monodocer.cs, Mono.Documentation/monodocs2html.cs: 
	  Reorder parameters to be in sorted order, so `mdoc help COMMAND` 
	  parameters are sorted.
	* Mono.Documentation/monodocer.cs: Remove try/catch in
	  MDocUpdater.Run(MDocUpdaterOptions), so that any generated exceptions
	  will be handled within mdoc itself (thus allowing the normal 
	  "See `mdoc help' for more information." message).  Improve some
	  error messages so they're more useful.

2008-12-04  Jonathan Pryor <jpryor@novell.com>

	* Makefile: Specify --exceptions=all in mdoc-update invocations.
	* exceptions.cs: Add support for documenting a *subset* of all
	  possible exceptions.  Subsets include: the member itself, the member
	  and methods it calls that are in the same assembly, and all possible
	  methods across all assemblies.
	* monodocer.cs: Allow --exceptions to take a SOURCES argument, to
	  control which location sources will be searched for exceptions.

2008-12-02  Jonathan Pryor <jpryor@novell.com>
